# msos_curses

./: .gitignore  CMakeLists.txt  packages.json
include/: curses.h
sources/: CMakeLists.txt  curses.cpp
tests/: CMakeLists.txt  attributes_tests.cpp  color_tests.cpp  main.cpp  output_tests.cpp
tests/stubs/: CMakeLists.txt
tests/stubs/msos/: usart_printer.hpp
tests/stubs/msos/libc/: printf.cpp  printf.hpp
